2013-05-06  Araki Ken  <arakiken@users.sf.net>

	* doc/ja/README.fb, doc/en/README.fb: Updated.

	* x_screen.c:
	  - Benchmark which is invoked by XK_F12 is added to shortcut_match().
	  - Segfault in preediting at the lower left corner of the screen is fixed.

2013-05-04  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The previous fix which caused segfault is fixed again.

2013-05-04  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.c: The bug of drawing the mouse cursor if ENABLE_DOUBLE_BUFFER
	  is defined is fixed.

	* fb/x_window.c, x_draw_str.c: wall_picture_bg argument is added to
	  draw_str() in x_window.c to optimize drawing string with wall picture.

2013-05-03  Araki Ken  <arakiken@users.sf.net>

	* fb/x_window.c: copy_area() is optimized.

	* fb/x.h, fb/x_display.c:
	  Double buffering of 1,2 or 4 bpp framebuffer is added.

2013-05-03  Araki Ken  <arakiken@users.sf.net>

	* c_imagelib.c: correct_height() is added to try to correct the height
	  of sixel graphics.

2013-05-02  Araki Ken  <arakiken@users.sf.net>

	* ml_char.c: ml_char_set() allows is_biwidth, is_comb, is_bold and
	  is_underlined to be > 1.
	  (This fixes the bug of use_dynamic_comb option.)

	* ml_logical_visual.c: Minor fixes.

	* fb/x_font.c, fb/x_window.c: x_get_bitmap_line() is added.

	* fb/x_font.h: Added.

2013-05-02  Araki Ken  <arakiken@users.sf.net>

	* fb/x_display.[ch], fb/x_window.c:
	  x_display_copy_line() -> x_display_copy_lines()

	* fb/x_display.c, x.h: Display::fp -> Display::fb

2013-05-01  Araki Ken  <arakiken@users.sf.net>

	* fb/x_imagelib.c: If the difference between the specified height and
	  the height of the loaded sixel picture is less than 6, they are
	  regarded as the same ones.

	* fb/x_font.c: "% 8" is replaced by "& 7".

	* fb/x_display.c:
	  - "% ppb" is replaced by "& (ppb - 1)".
	  - Tune up FB_SHIFT.

2013-04-30  Araki Ken  <arakiken@users.sf.net>

	* x_screen.c: set_wall_picture() isn't called in window_realized()